# chip8

./: .gitmodules  CMakeLists.txt
src/: chip8.c  chip8.h  instructions.c  instructions.h  io.c  io.h  main.c
